<resources>
    <string name="app_name">DEvents</string>
    <string name="devent_logo">DEvent logo</string>

    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter an email address and password!</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_success">Account successfully created! You can now Login.</string>
    <string name="login_error_message">Please make sure you enter an email address and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="add_item">Add New Item</string>
    <string name="action_logout">Logout</string>
    <string name="ui_buttonsave">Save</string>
    <string name="ui_buttoncancel">Cancel</string>

    <string name="userclass">userclass</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="user_name1">user_name1</string>
    <string name="change">Change</string>
    <string name="user_profile_picture">user profile picture</string>
    <string name="profile_picture">Profile picture</string>
    <string name="enter_user_name">enter_user_name</string>
    <string name="enter_user_email">enter_user_email</string>
    <string name="user_phone">user_phone</string>
    <string name="gender">gender</string>
    <string name="enter_phone_number">enter_phone_number</string>
    <string name="enter_class_year_e_g_2017">enter_class_year_e_g_2017</string>
    <string name="enter_major">enter_major</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="major">major</string>
    <string name="user_name">User Name</string>
    <string name="user_email">User Email</string>
    <string name="user_phone1">User Phone</string>
    <string name="Gender">Gender</string>
    <string name="User_class">Class year</string>
    <string name="enter_major1">Major</string>
    <string name="enter_user_name1">Enter user name</string>
    <string name="enter_user_email1">ENter user email</string>
    <string name="female1">Female</string>
    <string name="enter_your_class_year_e_g_2017">Enter class year e.g.2017</string>
    <string name="ui_profile_pic_Gallerychoose">Choose profile picture</string>
    <string name="preference_name">user_preference</string>
    <string name="profile_photo_file_name">profile_photo.png</string>
    <string name="ui_profile_name">profile_name</string>
    <string name="ui_profile_email">profile_email</string>
    <string name="action_settings">Settings</string>
    <string name="ui_profile_phone">profile_phone</string>
    <string name="ui_profile_gender">profile_gender</string>
    <string name="ui_profile_class">profile_class</string>
    <string name="ui_profile_major">profile_major</string>
    <string name="ui_settings_category">Account Preference</string>
    <string name="ui_settings_profile">User Profile</string>
    <string name="male1">Male</string>
    <string name="enter_phone_number1">Enter phone number</string>
    <string-array name="ui_profile_photo_selection">
        <item>Click image</item>
        <item>Select from Gallery</item>
    </string-array>
    <string name="ui_profile_toast_save_text">Saved</string>
</resources>
