<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fillViewport="true"
    android:scrollbarStyle="insideOverlay">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/profile_picture"
            tools:targetApi="o" />

        <LinearLayout
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="80dp"
                android:layout_height="102dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:focusable="true"
                android:focusableInTouchMode="true">
                // android:adjustViewBounds="false"
                // android:cropToPadding="false"
                //android:scaleType="fitStart"
                //android:layout_marginLeft="16dp"
                app:srcCompat="@mipmap/garfield"
                tools:targetApi="o" android:contentDescription="@string/todo" />

                <requestFocus />
            </ImageView>

            <Button
                android:id="@+id/changeButton"
                android:layout_width="23dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/Dartmouth"
                android:fontFamily="casual"
                android:onClick="changeProfilePic"
                android:text="@string/change" />

        </LinearLayout>

        <EditText
            android:id="@+id/userNameEnter"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="16dp"
            android:ems="10"
            android:fontFamily="casual"
            android:hint="@string/enter_user_name1"
            android:inputType="textCapWords|textPersonName"
            android:singleLine="true"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/userEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="16dp"
            android:ems="10"
            android:fontFamily="casual"
            android:hint="@string/enter_user_email1"
            android:inputType="textImeMultiLine|textEmailAddress"
            android:singleLine="true"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/userGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/Gender" />

        <RadioGroup
            android:id="@+id/radiogroup_Gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:text="@string/female1" />

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:text="@string/male1" />
        </RadioGroup>

        <EditText
            android:id="@+id/classYear"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="16dp"
            android:ems="10"
            android:fontFamily="casual"
            android:hint="@string/enter_your_class_year_e_g_2017"
            android:inputType="number|date"
            android:singleLine="true"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/Major"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="16dp"
            android:ems="10"
            android:fontFamily="casual"
            android:hint="@string/enter_major1"
            android:inputType="textPersonName"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_width="369dp"
            android:layout_height="300dp"
            android:layout_marginBottom="100dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/bCancel"
                style="@android:style/Widget.DeviceDefault.Button"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:background="@color/cast_expanded_controller_background_color"
                android:fontFamily="casual"
                android:text="@string/cancel"
                android:textColor="@color/cast_expanded_controller_progress_text_color" />

            <Button
                android:id="@+id/bSave"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:background="@color/Dartmouth"
                android:fontFamily="casual"
                android:onClick="SaveClick"
                android:text="@string/save"
                android:textColor="@color/cast_expanded_controller_background_color"
                tools:targetApi="o" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>




